# rkrlv2

./: AUTHORS  CMakeLists.txt  Makefile.am  README  aci.html  credits.html  effects.html  extra.html  general.html  hardware.html  help.html  index.html  metronome.html  midiconverter.html  midiic.html  midilearn.html  presetlist.html  taptempo.html  tuner.html
css/: Makefile.am
data/: 1.dly  1.rvb  10.dly  10.rvb  11.dly  2.dly  2.rvb  3.dly  3.rvb  4.dly  4.rvb  5.dly  5.rvb  6.dly  6.rvb  7.dly  7.rvb  8.dly  8.rvb  9.dly  9.rvb
imagenes/: Makefile.am
lv2/: CMakeLists.txt  README  complv2.C  convertbank.py  eqllv2.C  manifestcrunch.py  old_rkrlv2.C  old_rkrlv2.h  rkrlv2.C  rkrlv2.h  rkrremap.py  ttlcrunch.py  whalv2.C
lv2/presets/: 12 Strings Crazy.carxp  12 Strings Down.carxp  12 Strings.carxp  Acoustic Bright.carxp  Acoustic Chorus.carxp  Acoustic Sparkle.carxp  Acoustic.carxp  All is Lost.carxp  Ambience.carxp  Ambient Flange.carxp  Amp.carxp  Angel's Chorus.carxp  Arppeg Sprinkler.carxp  Aural Phaser.carxp  Auto Wah 2.carxp  Auto Wah.carxp  AutoYa.carxp  AutoYiYa.carxp  Aymimadre.carxp  Backward Tumble.carxp  Ballada Duet Gm *.carxp  Ballada Solo.carxp  Bass.carxp  Big Stack.carxp  BlowMoeJo.carxp  Bright Size.carxp  C Melody.carxp  Cathedral Swell.carxp  Charred Violets.carxp  Chinese Lead.carxp  Chorus Riff.carxp  Circle Tremolo.carxp  Classic Chorus.carxp  Classic WF.carxp  Clean Smack Back.carxp  Clean Tremolo.carxp  Clean Twirl.carxp  Clean-2.carxp  Clean-A-Duet *.carxp  CleanChord.carxp  (+138 more)
lv2/ttl/: alienwah.ttl  alienwah_presets.ttl  aphas.ttl  aphas_presets.ttl  arpie.ttl  arpie_presets.ttl  cab.ttl  chorus.ttl  chorus_presets.ttl  coilcrafter.ttl  coilcrafter_presets.ttl  comp.ttl  comp_presets.ttl  compband.ttl  compband_presets.ttl  dere.ttl  dere_presets.ttl  dist.ttl  dist_presets.ttl  distband.ttl  distband_presets.ttl  dual_flange.ttl  dual_flange_presets.ttl  echo.ttl  echo_presets.ttl  echotron.ttl  echotron_presets.ttl  echoverse.ttl  echoverse_presets.ttl  eql.ttl  eqp.ttl  exciter.ttl  exciter_presets.ttl  expander.ttl  expander_presets.ttl  gate.ttl  gate_presets.ttl  harm.ttl  harm_no_midi.ttl  harm_no_midi_presets.ttl  (+46 more)
presets/: convertbank.py  rkrremap.py  ttlcrunch.py
src/: APhaser.C  APhaser.h  Alienwah.C  Alienwah.h  AnalogFilter.C  AnalogFilter.h  Arpie.C  Arpie.h  CMakeLists.txt  Cabinet.C  Cabinet.h  Chorus.C  Chorus.h  CoilCrafter.C  CoilCrafter.h  CompBand.C  CompBand.h  Compressor.C  Compressor.h  Convolotron.C  Convolotron.h  Distorsion.C  Distorsion.h  Dual_Flange.C  Dual_Flange.h  DynamicFilter.C  DynamicFilter.h  EQ.C  EQ.h  Echo.C  Echo.h  Echotron.C  Echotron.h  Effect.h  EffectLFO.C  EffectLFO.h  Exciter.C  Exciter.h  Expander.C  Expander.h  (+111 more)
