SUBDIRS = imagenes css
htmldir = $(docdir)/html
html_DATA= help.html \
	aci.html \
	general.html \
	effects.html \
	midiconverter.html \
	tuner.html \
	midilearn.html \
	taptempo.html \
	metronome.html \
	hardware.html \
	extra.html \
	credits.html \
	presetlist.html \
	midiic.html \
	license.html
	
EXTRA_DIST = $(html_DATA)
