htmldir = $(docdir)/html/imagenes
html_DATA= icono_rakarrack_128x128.png \
	screen.png \
	jack_conections.jpg \
	bank_mgmt.jpg \
	thema1b.jpg \
	thema2b.jpg \
	thema3b.jpg \
	schema1b.jpg \
	schema2b.jpg \
	settings.jpg \
	settings1.jpg \
	settings2.jpg \
	settings3.jpg \
	settings4.jpg \
	settings5.jpg \
	midilearn.jpg \
	metro.jpg \
	order.jpg \
	preset_name1.png \
	eq.jpg \
	compresor.jpg \
	dist.jpg \
	ovrd.jpg \
	derelict.jpg \
	eco.jpg \
	chorus.jpg \
	phaser.jpg \
	midi.jpg \
	flanger.jpg \
	tuner1.png \
	reverb.jpg \
	peq.jpg \
	ng.jpg \
	Aphaser.jpg \
	har.jpg \
	cabinet.jpg \
	md.jpg \
	ww.jpg \
	aw.jpg \
	val.jpg \
	ex.jpg \
	exp.jpg \
	ring.jpg \
	df.jpg \
	db.jpg \
	arp.jpg \
	shu.jpg \
	syn.jpg \
	var.jpg \
	loo.jpg \
	mut.jpg \
	con.jpg \
	tap.jpg \
	coi.jpg \
	she.jpg \
	voc.jpg \
	ecv.jpg \
	sus.jpg \
	seq.jpg \
	shi.jpg \
	sto.jpg \
	aci.png \
	rvt.jpg \
	ect.jpg \
	sth.jpg \
	cpb.jpg \
	opt.jpg \
	dlyfile.png \
	vib.jpg \
	inf.jpg \
	pan.jpg
	
EXTRA_DIST = $(html_DATA)
