bin_PROGRAMS = rakarrack
rakarrack_SOURCES = main.C \
	Alienwah.h \
	AnalogFilter.h \
	APhaser.h \
	Arpie.h \
	beattracker.h \
	Chorus.h \
	CoilCrafter.h \
	CompBand.h \
	Compressor.h \
	config.h \
	Convolotron.h \
	delayline.h \
	Distorsion.h \
	Dual_Flange.h \
	DynamicFilter.h \
	Echo.h \
	Echotron.h \
	Effect.h \
	EffectLFO.h \
	EQ.h \
	Exciter.h \
	Expander.h \
	f_sin.h \
	Filter_.h \
	Filter.h \
	FilterParams.h \
	FormantFilter.h \
	FPreset.h \
	Gate.h \
	global.h \
	HarmonicEnhancer.h \
	Harmonizer.h \
	jack.h \
	Looper.h \
	mayer_fft.h \
	MBDist.h \
	MBVvol.h \
	metronome.h\
	MIDIConverter.h \
	MusicDelay.h \
	NewDist.h \
	Opticaltrem.h \
	Pan.h \
	Phaser.h \
	rakarrack.h \
	RBFilter.h \
	RBEcho.h \
	RecChord.h \
	RecognizeNote.h \
	Resample.h \
	Reverb.h \
	Reverbtron.h \
	Ring.h \
	RyanWah.h \
	Sequence.h \
	ShelfBoost.h \
	Shifter.h \
	Shuffle.h \
	smbPitchShift.h \
	StereoHarm.h \
	StompBox.h \
	Sustainer.h \
	SVFilter.h \
	Synthfilter.h \
	Tuner.h \
	Valve.h \
	Vibe.h \
	Vocoder.h \
	Waveshaper.h \
	icono_rakarrack_128x128.xpm \
	icono_rakarrack_32x32.xpm \
	jack.C \
	rakarrack.cxx \
	process.C \
	fileio.C \
	varios.C \
	FPreset.C \
	Reverb.C \
	Chorus.C \
	EffectLFO.C \
	Echo.C \
	Phaser.C \
	Distorsion.C \
	EQ.C \
	Compressor.C \
	AnalogFilter.C \
	Alienwah.C \
	beattracker.C \
	delayline.C \
	Filter.C \
	HarmonicEnhancer.C \
	DynamicFilter.C \
	SVFilter.C \
	RBFilter.C \
	FormantFilter.C \
	FilterParams.C \
	Pan.C \
	Harmonizer.C \
	smbPitchShift.C \
	Tuner.C \
	MusicDelay.C \
	Gate.C \
	RecognizeNote.C \
	RecChord.C \
	rkrMIDI.C \
	NewDist.C \
	APhaser.C \
	Dual_Flange.C \
	Exciter.C \
	MBDist.C \
	Valve.C \
	Arpie.C \
	Expander.C \
	Ring.C \
	Shuffle.C \
	mayer_fft.C \
	MBVvol.C \
	metronome.C\
	Convolotron.C \
	Synthfilter.C \
	Resample.C \
	Looper.C \
	RyanWah.C \
	RBEcho.C \
	CoilCrafter.C \
	ShelfBoost.C \
	Vocoder.C \
	Waveshaper.C \
	Sustainer.C \
	Sequence.C \
	Shifter.C \
	StompBox.C \
	Reverbtron.C \
	Echotron.C \
	StereoHarm.C \
	CompBand.C \
	Opticaltrem.C \
	Vibe.C \
	MIDIConverter.C \
	Infinity.C \
	Infinity.h
